第二天内容

--- a/user.html
+++ b/user.html
@@ -27,6 +27,7 @@
     </div>
     <!--用户头部结束-->
 
+    <!--用户个人中心菜单导航开始-->
     <div class="user-page-body">
         <ul class="user-page-body-nav-list">
             <li class="user-page-body-nav-list-item">
@@ -61,8 +62,7 @@
             </li>
         </ul>
     </div>
-
-
+    <!--用户个人中心菜单导航结束-->
 
     <!--菜单导航开始-->
     <nav class="mui-bar mui-bar-tab zf-nav" >
