--- a/index.html
+++ b/index.html
@@ -59,17 +59,23 @@
     <!--九宫格开始-->
     <div class="mui-content zf-gong-ge">
         <ul class="mui-table-view mui-grid-view mui-grid-9">
-            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="#">
-                <img class="mui-icon mui-icon-home" src="./img/icon/Frame-4.png" alt="">
-                <div class="mui-media-body">中心介绍</div></a>
+            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-4">
+                <a href="./introduce.html">
+                    <img class="mui-icon mui-icon-home" src="./img/icon/Frame-4.png" alt="">
+                    <div class="mui-media-body">中心介绍</div>
+                </a>
             </li>
-            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="#">
-                <img class="mui-icon mui-icon-home" src="./img/icon/Frame-5.png" alt="">
-                <div class="mui-media-body">马上预约</div></a>
+            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-4">
+                <a href="./create-order.html">
+                    <img class="mui-icon mui-icon-home" src="./img/icon/Frame-5.png" alt="">
+                    <div class="mui-media-body">马上预约</div>
+                </a>
             </li>
-            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3"><a href="#">
-                <img class="mui-icon mui-icon-home" src="./img/icon/Frame-6.png" alt="">
-                <div class="mui-media-body">帮助中心</div></a>
+            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-4">
+                <a href="#">
+                    <img class="mui-icon mui-icon-home" src="./img/icon/Frame-6.png" alt="">
+                    <div class="mui-media-body">帮助中心</div>
+                </a>
             </li>
 
         </ul>
@@ -89,7 +95,7 @@
                         <a href="javascript:;">
                             <img class="mui-media-object mui-pull-left" src="./img/a1.png">
                             <div class="mui-media-body">
-                                活动活动活活动活动活动
+                                <h5 class="c-black text-hidden"> 活动活动活活动活动活动</h5>
                                 <p class='zf-mui-ellipsis mt8'>是件幸福的事情是件幸福的事情是件幸福的事情，是件幸福的事情；可是，打呼噜怎么办？</p>
                             </div>
                         </a>
@@ -98,7 +104,7 @@
                         <a href="javascript:;">
                             <img class="mui-media-object mui-pull-left" src="./img/a1.png">
                             <div class="mui-media-body">
-                                木屋活动活动活动活动
+                                <h5 class="c-black text-hidden"> 活动活动活活动活动活动</h5>
                                 <p class='zf-mui-ellipsis mt8'>是件幸福的事情是件幸福的事情是件幸福的事情，夏天挫冰吃瓜，冬天围炉取暖.</p>
                             </div>
                         </a>
@@ -107,14 +113,12 @@
                         <a href="javascript:;">
                             <img class="mui-media-object mui-pull-left" src="./img/a1.png">
                             <div class="mui-media-body">
-                                CBD
+                                <h5 class="c-black text-hidden"> 活动活动活活动活动活动</h5>
                                 <p class='zf-mui-ellipsis mt8'>烤炉模式的城，是件幸福的事情是件幸福的事情，如同打翻的调色盘一般.</p>
                             </div>
                         </a>
                     </li>
-
                 </ul>
-
             </div>
         </div>
         <div class="mui-card-footer">
@@ -136,7 +140,7 @@
                         <a href="javascript:;">
                             <img class="mui-media-object mui-pull-left" src="./img/a1.png">
                             <div class="mui-media-body">
-                                活动活动活活动活动活动
+                                <h5 class="c-black text-hidden"> 活动活动活活动活动活动</h5>
                                 <p class='zf-mui-ellipsis mt8'>是件幸福的事情是件幸福的事情是件幸福的事情，是件幸福的事情；可是，打呼噜怎么办？</p>
                             </div>
                         </a>
@@ -145,7 +149,7 @@
                         <a href="javascript:;">
                             <img class="mui-media-object mui-pull-left" src="./img/a1.png">
                             <div class="mui-media-body">
-                                木屋活动活动活动活动
+                                <h5 class="c-black text-hidden"> 活动活动活活动活动活动</h5>
                                 <p class='zf-mui-ellipsis mt8'>是件幸福的事情是件幸福的事情是件幸福的事情，夏天挫冰吃瓜，冬天围炉取暖.</p>
                             </div>
                         </a>
@@ -154,7 +158,7 @@
                         <a href="javascript:;">
                             <img class="mui-media-object mui-pull-left" src="./img/a1.png">
                             <div class="mui-media-body">
-                                CBD
+                                <h5 class="c-black text-hidden"> 活动活动活活动活动活动</h5>
                                 <p class='zf-mui-ellipsis mt8'>是件幸福的事情是件幸福的事情是件幸福的事情烤炉模式的城，，如同打翻的调色盘一般.</p>
                             </div>
                         </a>
